javítás és csere

--- a/index.html
+++ b/index.html
@@ -1,50 +1,49 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
-        <link rel="stylesheet" href="/calculator/css/style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/calculator/css/style.css">
+    <title>Calculator</title>
+</head>
 
-    <body>
+<body>
+    <main class="main--style">
 
-        <div class="calculator">
-            <div class="calculator__output">
-                <input type="text" class="calculator__output-value" readonly>
-            </div>
-            <div class="calculator__buttons">
-                <div class="calculator__column">
-                    <button data-value="+" class="calculator__button calculator__button--darker">+</button>
-                    <button data-value="7" class="calculator__button">7</button>
-                    <button data-value="4" class="calculator__button">4</button>
-                    <button data-value="1" class="calculator__button">1</button>
-                    <button data-value="0" class="calculator__button">0</button>
+        <div class="calc__body">
+            <div class="calc__display"></div>
+            <div class="calc__buttonRows">
+                <div class="calc__row">
+                    <button class="calc__btn btn__operator">+</button>
+                    <button class="calc__btn btn__digit">7</button>
+                    <button class="calc__btn btn__digit">4</button>
+                    <button class="calc__btn btn__digit">1</button>
+                    <button class="calc__btn btn__digit">0</button>
                 </div>
-                <div class="calculator__column">
-                    <button data-value="-" class="calculator__button calculator__button--darker">-</button>
-                    <button data-value="8" class="calculator__button">8</button>
-                    <button data-value="5" class="calculator__button">5</button>
-                    <button data-value="2" class="calculator__button">2</button>
-                    <button data-value="." class="calculator__button">.</button>
+                <div class="calc__row">
+                    <button class="calc__btn btn__operator">-</button>
+                    <button class="calc__btn btn__digit">8</button>
+                    <button class="calc__btn btn__digit">5</button>
+                    <button class="calc__btn btn__digit">2</button>
+                    <button class="calc__btn btn__digit">.</button>
                 </div>
-                <div class="calculator__column">
-                    <button data-value="*" class="calculator__button calculator__button--darker">&times;</button>
-                    <button data-value="9" class="calculator__button">9</button>
-                    <button data-value="6" class="calculator__button">6</button>
-                    <button data-value="3" class="calculator__button">3</button>
-                    <button data-value="C" class="calculator__button calculator__button--clear">C</button>
+                <div class="calc__row">
+                    <button class="calc__btn btn__operator">×</button>
+                    <button class="calc__btn btn__digit">9</button>
+                    <button class="calc__btn btn__digit">6</button>
+                    <button class="calc__btn btn__digit">3</button>
+                    <button class="calc__btn btn__clear">C</button>
                 </div>
-                <div class="calculator__column">
-                    <button data-value="/" class="calculator__button calculator__button--darker">&div;</button>
-                    <button data-value="=" class="calculator__button calculator__button--equal">=</button>
+                <div class="calc__row">
+                    <button class="calc__btn btn__operator">÷</button>
+                    <button class="calc__btn btn__equation">=</button>
                 </div>
             </div>
         </div>
 
-        <script src="/calculator/js/calculator.js"></script>
-    </body>
+    </main>
+    <script src="/calculator/js/calculator.js"></script>
+</body>
 
 </html>
